feat udistrital/arka_cliente#889: Paso a producción
- Controlador y documentación para servicio que trae todos los terceros con su respectiva identificación (si existe) que concuerdan parcialmente con el string suministrado.
- El string se proporciona asío: Código abreviación del tipo de documento + Número de identificación + Nombre completo.
