# swagger/swagger.json
@@ -997,13 +997,13 @@
                 "tags": [
                     "tercero"
                 ],
-                "description": "get Tercero",
-                "operationId": "TerceroController.Get All",
+                "description": "Consulta en las tablas tercero y datos_identificacion el string suministrado",
+                "operationId": "TerceroController.GetAllTrTerceroIdentificacion",
                 "parameters": [
                     {
                         "in": "query",
                         "name": "query",
-                        "description": "string de busqueda",
+                        "description": "tipo documento + numero documento + nombre completo",
                         "required": true,
                         "type": "string"
                     }
@@ -1012,7 +1012,10 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.DatosIdentificacionTercero"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.DatosIdentificacionTercero"
+                            }
                         }
                     },
                     "404": {
